kubernetes/platform/minio/app/components/route/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio
spec:
  hostnames:
  - s3.${CLUSTER_DOMAIN}
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: envoy-gateway
    namespace: envoy-gateway-system
  rules:
  - backendRefs:
      - name: minio
        port: 9000
    matches:
    - path:
        type: PathPrefix
        value: /

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-console
spec:
  hostnames:
  - minio.${CLUSTER_DOMAIN}
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: envoy-gateway
    namespace: envoy-gateway-system
  rules:
  - backendRefs:
     - name: minio-console
       port: 9001
    matches:
    - path:
        type: PathPrefix
        value: /
